# reto-ai-first-fase1

./: .gitattributes  .gitignore  CLAUDE.md  README.md  SOUL.md
05-learning/: README.md  skills.md
06-code/: README.md  docker-compose.yml
06-code/backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
06-code/backend/app/: main.py
06-code/backend/app/api/v1/: health.py
06-code/backend/app/application/ports/: bookmark_repository.py  opportunity_repository.py  saved_search_repository.py  secop_client.py  user_repository.py
06-code/backend/app/application/use_cases/: create_bookmark.py  create_saved_search.py  delete_bookmark.py  delete_saved_search.py  get_opportunity.py  list_bookmarks.py  list_saved_searches.py  login_user.py  register_user.py  search_opportunities.py
06-code/backend/app/core/: config.py
06-code/backend/app/db/: health.py
06-code/backend/app/domain/: bookmark.py  opportunity.py  saved_search.py  user.py
06-code/backend/app/infrastructure/database/: bookmark_repository.py  opportunity_repository.py  saved_search_repository.py  user_repository.py
06-code/backend/app/infrastructure/security/: auth.py  jwt.py
06-code/backend/app/interfaces/api/v1/: auth.py  bookmarks.py  health.py  opportunities.py  router.py  saved_searches.py
06-code/backend/tests/: test_auth_login.py  test_auth_register.py  test_bookmarks.py  test_health.py  test_opportunities.py  test_saved_searches.py
2-workshops/: guia-personal-workshops-1-2.md  guia-personal-workshops-3-4.md
4-internal/: STEPS.md  (+3 more)
(+100 files in other folders)
