[project]
name = "portal-convocatorias-backend"
version = "0.1.0"
description = "FastAPI backend for the Portal de Convocatorias Públicas"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "httpx>=0.28.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.12.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "anyio>=4.0.0",
    "pytest>=8.4.0",
    "pytest-anyio>=0.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
